--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "d3-ease": "^2.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
+    "react-move": "^6.4.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
