--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "d3-ease": "^2.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-animated-css": "^1.2.1",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-moment": "^1.1.1",
     "react-move": "^6.4.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
